<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/overlay_container"
    android:layout_width="280dp"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/options_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_overlay_background" >

        <TextView
            android:id="@+id/qf_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/qf_text"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <RelativeLayout
            android:id="@+id/feed_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qf_title" >

            <TextView
                android:id="@+id/processing_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/options_str"
                android:textColor="@android:color/white"
                android:textSize="15dp" />
        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/feed_holder"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:background="@color/dark_overlay_background"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/stop_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/stop"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/refresh"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
            <Button
                android:id="@+id/apply_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>